--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Page Title</title>
 </head>
 
 <body>
 
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
-    <img src='./photo.jpg'>
+    <h1>Add number</h1>
+    <form action="/add"
+    method="post">
+</form>
+    <input type="number" name="a" value="5" ><br>
+    <input type="number" name="b" value="10" ><br>
+
+    <button type="submit">add</button>>
+   
+ 
 
 </body>
-
 </html>
