--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <input type="number" name="a" value="5" ><br>
     <input type="number" name="b" value="10" ><br>
 
-    <button type="submit">add</button>>
+    <button type="submit">add</button>
    
  
 
