--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Page Title</title>
 </head>
 
 <body>
-
     <h1>Add number</h1>
-    <form action="/add"
-    method="post">
-</form>
-    <input type="number" name="a" value="5" ><br>
-    <input type="number" name="b" value="10" ><br>
-
-    <button type="submit">add</button>
-   
- 
+    <form action="/add" method="post">
+        <input type="number" name="a">
+        <br>
+        <input type="number" name="b">
+        <br>
+        <button type="submit">Add</button>
+    </form>
 
 </body>
+
 </html>
